--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -1,12 +1,11 @@
 .cart-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 70vh;
 }
 
-.cart-image {
-  width: 15%;
-  height: 30%;
+.cart-img {
+  width: 150px;
 }
